--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <center>Coming soon, curious about what we're building?</center>
-<center><a href="https://www.frabric.network">www.frabric.network</a></center>
+<center><a href="https://frabric.io/">www.frabric.io</a></center>
 </body>
 </html>
