Quick redesign to match frabric.io

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Fractional Finance</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<center>Coming soon, curious about what we're building?</center>
-<center><a href="https://frabric.io/">www.frabric.io</a></center>
+    <h1 class='title'>Coming Soon</h1>
+    <span class='subtitle'>Curious about what we're building?</span>
+    <span class='subtitle'><a href="https://frabric.io/">www.frabric.io</a></span>
 </body>
+
 </html>
